--- a/versioned_docs/version-3.0/paymaster/index.mdx
+++ b/versioned_docs/version-3.0/paymaster/index.mdx
@@ -7,8 +7,17 @@ title: Paymaster
 Paymasters are smart contracts that help facilitate transaction sponsorship, allowing third-party-designed mechanisms to pay for transactions.
 With Biconomy's Paymaster service, you can manage gas fees for your users effortlessly.
 
-**Revenue sharing**: on a case-by-case basis depending on volumes, we do offer a split of the Paymaster fee revenue with selected Apps. 
-<button class="my-button" > <a href="https://www.biconomy.io/book-a-demo" target="_blank" rel="noopener noreferrer">Get in touch</a> </button> to learn more.
+**Revenue sharing**: on a case-by-case basis depending on volumes, we do offer a split of the Paymaster fee revenue with selected Apps.
+
+<button class="my-button">
+  <a
+    href="https://www.biconomy.io/book-a-demo"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Get in touch to learn more.
+  </a>
+</button>
 
 In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on the dashboard and obtain the paymasterURL. Biconomy paymaster supports two modes:
 
@@ -16,7 +25,7 @@ In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on 
 
 ![Sponsored](../images/overview/sponsored.png)
 
-`Sponsorship` mode allows you to pay gas on behalf of the users, by eliminating the need of native tokens to be paid by the users. 
+`Sponsorship` mode allows you to pay gas on behalf of the users, by eliminating the need of native tokens to be paid by the users.
 
 ## Token Paymaster
 
