--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -3,33 +3,39 @@ sidebar_label: "Quickstart"
 sidebar_position: 2
 ---
 
-# Quickstart: Smart Account ⚡️
+# Quickstart ⚡️
 
-In this guide, we will create a smart account and mint an NFT with Biconomy and Node.js. Check out the full code at the end.
+In this guide, we will create a smart account and mint an NFT with [Biconomy's SDK](https://github.com/bcnmy/biconomy-client-sdk) and Node.js.
 
 :::info
 Please note that this tutorial assumes you have Node.js installed and have working knowledge of it. 🧠
 :::
 
-## 1. Environment set up 🛠️
+## 1. Setup 🛠️
 
-We will create an npm project to get started. 
+Let's create a [Typescript](https://www.typescriptlang.org) project using npm to get started.
 
 ```bash
-mkdir biconomy-sa
-cd biconomy-sa
-npm init -y
+mkdir biconomy-sa && cd biconomy-sa && npm init -y
 ```
 
-Install biconomy sdk packages using npm.
+**Install biconomy's account package using npm:**
+
+```
+
+  npm i @biconomy/account
+
+```
+
+And install some helper dev dependencies...
 
 ```bash
-npm i @biconomy/account
 npm i --save-dev @types/node tslib
 ```
 
 Create the following tsconfig.json (TypeScript config):
-```typescript
+
+```bash
 {
   "compilerOptions": {
     "target": "es5",
@@ -44,26 +50,35 @@ Create the following tsconfig.json (TypeScript config):
 ```
 
 > The **Account package** will help you with creating **Smart Account** and an interface with them to send transactions.
-The same package can be used to also import the paymaster and bundler.
+> The same package can be used to also import the paymaster and bundler.
 
-## 2. Create a smart account 🌟
-
+## 2. Create a Smart Account 🌟
 
 The **Externally Owned Account (EOA)** corresponding to the private key will serve as the owner of the Smart Account we create. You can get the private key from wallets like MetaMask, TrustWallet, Coinbase Wallet, etc. 🔑
 
 Create an index.ts file, copy the following code in it and replace the `PRIVATE_KEY`.
 
-> Be sure to never publicly expose your private key publicly. If possible, store it using an environment variable.
+> Be sure to never publicly expose your private key publicly.
 
 ```ts
-import { Hex, createWalletClient, encodeFunctionData, http, parseAbi, zeroAddress} from "viem";
+import {
+  Hex,
+  createWalletClient,
+  encodeFunctionData,
+  http,
+  parseAbi,
+  zeroAddress,
+} from "viem";
 import { privateKeyToAccount } from "viem/accounts";
 import { polygonMumbai } from "viem/chains";
-import { createSmartAccountClient} from "@biconomy/account";
+import { createSmartAccountClient } from "@biconomy/account";
+
+const bundlerUrl =
+  "https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44"; // Found at https://dashboard.biconomy.io
 
 export const createAccountAndMintNft = async () => {
   // ----- 1. Generate EOA from private key
-  const account = privateKeyToAccount("PRIVATE_KEY");
+  const account = privateKeyToAccount("0x" + "PRIVATE_KEY");
   const client = createWalletClient({
     account,
     chain: polygonMumbai,
@@ -75,22 +90,19 @@ export const createAccountAndMintNft = async () => {
   // ------ 2. Create biconomy smart account instance
   const smartAccount = await createSmartAccountClient({
     signer: client,
-    bundlerUrl: "https://bundler.biconomy.io/api/v2/80001/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+    bundlerUrl,
   });
   const scwAddress = await smartAccount.getAccountAddress();
   console.log("SCW Address", scwAddress);
-
 };
 createAccountAndMintNft();
-
 ```
 
-Next, run the following command: 
+Next, run the following command:
 
 ```bash
 npx ts-node index.ts
 ```
-
 
 You should see EOA and the smart account address in the console.
 
@@ -99,9 +111,7 @@ EOA address: 0x7d4EcAc73A5574447E0F38b8451DC9B29D8Fd083
 SCW Address 0x4dF23B78543F5c2F9CBCDF09956288B3e97bb9a4
 ```
 
-
-Smart accounts are designed with a pre-determined address known prior to deployment. Users transfer funds to this address and then the actual deployment transaction is internally batched with the first transaction that is done by that smart Account. Additionally, the paymaster can be used for this to sponsor this transaction.
-
+Smart accounts are designed with a pre-determined address known prior to deployment. Users transfer funds to this address and then the actual deployment transaction is internally batched with the first transaction that is done by that smart Account. Alternatively the paymaster could be used to sponsor this transaction.
 
 :::caution
 Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network, head over to the [Polygon Faucet](https://faucet.polygon.technology/), paste in your smart account address, and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)! 💸
@@ -109,7 +119,7 @@ Before continuing, now that we have our Smart Account address, we need to fund i
 
 Once you have tokens available, follow the next steps.
 
-## 3. Execute your first transaction 🚀 
+## 3. Execute your first transaction 🚀
 
 Let's create your first transaction
 
@@ -130,18 +140,16 @@ try {
   });
 
   // ------ 4. Send transaction
-  const transactionResponse = await smartAccount.sendTransaction(
-    {
-      to: nftAddress,
-      data: nftData,
-    }
-  );
+  const transactionResponse = await smartAccount.sendTransaction({
+    to: nftAddress,
+    data: nftData,
+  });
   const { transactionHash } = await transactionResponse.waitForTxHash();
   console.log("transactionHash", transactionHash);
 } catch (error: unknown) {
-    if (error instanceof Error) {
-      console.error("Transaction Error:", error.message);
-    }
+  if (error instanceof Error) {
+    console.error("Transaction Error:", error.message);
+  }
 }
 ```
 
@@ -170,7 +178,7 @@ import { createSmartAccountClient} from "@biconomy/account";
 
 export const createAccountAndMintNft = async () => {
   // ----- 1. Generate EOA from private key
-  const account = privateKeyToAccount("PRIVATE_KEY);
+  const account = privateKeyToAccount("0x" + "PRIVATE_KEY);
   const client = createWalletClient({
     account,
     chain: polygonMumbai,
