--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -8,7 +8,7 @@ sidebar_position: 2
 In this guide, we will create a smart account and mint an NFT with [Biconomy's SDK](https://github.com/bcnmy/biconomy-client-sdk) and Node.js.
 
 :::info
-For a detailed exploration of the SDK's inner workings, delve into our more granular [API documentation](https://bcnmy.github.io/biconomy-client-sdk/#md:biconomy-sdk), where you'll find comprehensive descriptions for the features we offer.
+For a detailed exploration of the SDK's inner workings, delve into our more granular [API documentation](https://bcnmy.github.io/biconomy-client-sdk/#md:biconomy-sdk).
 :::
 
 ## 1. Setup 🛠️
