--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -117,7 +117,7 @@ Once you have tokens available, follow the next steps.
 
 Let's create your first transaction
 
-- `to`: The address towards which this interaction is directed.
+- `to`: Smart Contract your Smart Account will interact with.
 - `data`: For the mint function we will pass the `nftData` created using `encodeFunctionData`.
 - `value`: For the mint function this won't be needed. Depending on the transaction, you can pass the value.
 
