links for bundler / paymaster

--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -82,7 +82,8 @@ const userOpReceiptMaxDurationIntervals: { [key in number]?: number } = {
 };
 
 const bundler = await createBundler({
-  bundlerUrl: "bundler url",
+  bundlerUrl:
+    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
   userOpReceiptMaxDurationIntervals,
 });
 
