--- a/docs/Modules/BatchedSession.mdx
+++ b/docs/Modules/BatchedSession.mdx
@@ -54,7 +54,7 @@ const sessionModule = await createSessionKeyManagerModule({
 const sessionRouterModule = await createBatchedSessionRouterModule({
   moduleAddress: routerModuleAddr,
   sessionKeyManagerModule: sessionModule,
-  smartAccountAddress: scwAddress,
+  smartAccountAddress: saAddress,
 });
 ```
 
