--- a/versioned_docs/version-3.0/modules/BatchedSession.mdx
+++ b/versioned_docs/version-3.0/modules/BatchedSession.mdx
@@ -54,7 +54,7 @@ const sessionModule = await SessionKeyManagerModule.create({
 const sessionRouterModule = await BatchedSessionRouterModule.create({
   moduleAddress: routerModuleAddr,
   sessionKeyManagerModule: sessionModule,
-  smartAccountAddress: scwAddress,
+  smartAccountAddress: saAddress,
 });
 ```
 
