--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -73,7 +73,7 @@ console.log(`EOA address: ${eoa}`);
 const smartAccount = await createSmartAccountClient({
   signer: client,
   bundlerUrl: "BUNDLER_URL",
-  biconomyPaymasterApiKey: "", // optional
+  biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // optional
 });
 const smartAccountAddress = await smartAccount.getAccountAddress();
 console.log("Smart Account Address", smartAccountAddress);
@@ -86,13 +86,13 @@ console.log("Smart Account Address", smartAccountAddress);
 import { ethers } from "ethers";
 import { createSmartAccountClient } from "@biconomy/account";
 
-let provider = new ethers.providers.JsonRpcProvider("RPC_URL");
+let provider = new new ethers.JsonRpcProvider("RPC_URL")();
 let signer = new ethers.Wallet("PRIVATE_KEY", provider);
 
 const biconomySmartAccountConfig = {
   signer: signer,
   bundlerUrl: "BUNDLER_URL",
-  biconomyPaymasterApiKey: "", // optional
+  biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // optional
 };
 
 const smartAccount = await createSmartAccountClient(biconomySmartAccountConfig);
@@ -123,8 +123,8 @@ const smartAccount = await createSmartAccountClient({
   bundlerUrl: config.bundlerUrl,
   biconomyPaymasterApiKey: config.biconomyPaymasterApiKey,
 });
-const scwAddress = await smartAccount.getAccountAddress();
-console.log("SCW Address", scwAddress);
+const saAddress = await smartAccount.getAccountAddress();
+console.log("SA Address", saAddress);
 ```
 
 </TabItem>
