--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -37,7 +37,7 @@ pnpm add @biconomy/paymaster
 </TabItem>
 </Tabs>
 
-## Integration 
+## Integration
 
 Set up a paymaster for the smart account by providing only the paymaster API key. The default mode used is `Sponsored` mode in this case.
 :::info
@@ -53,11 +53,12 @@ Set up a paymaster for the smart account by providing only the paymaster API key
     {
       signer: signer,
       chainId: 80001
-      biconomyPaymasterApiKey: "paymaster api key",
+      biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
       bundlerUrl: "bundler url"
     }
   );
 ```
+
 If you wish to pass "strictMode" to your Paymaster you need to create the instace.
 
 ```typescript
