--- a/versioned_docs/version-3.0/account/integration.mdx
+++ b/versioned_docs/version-3.0/account/integration.mdx
@@ -49,7 +49,7 @@ pnpm add @biconomy/account @biconomy/bundler @biconomy/paymaster @biconomy/commo
 Now you can simply create smart accounts like this.
 
 ```typescript
-  import { ethers } from "ethers";	
+  import { ethers } from "ethers";
   import { BiconomySmartAccountV2} from "@biconomy/account";
 
   let provider = new ethers.providers.JsonRpcProvider("rpcUrl");
@@ -58,7 +58,7 @@ Now you can simply create smart accounts like this.
   const biconomySmartAccountConfig = {
     signer: signer,
     chainId: 80001
-    biconomyPaymasterApiKey: "",
+    biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster",
     bundlerUrl: ""
   };
 
@@ -66,7 +66,9 @@ Now you can simply create smart accounts like this.
     biconomySmartAccountConfig
   );
 ```
+
 This smart account uses the following default values:
+
 - ECDSA Validation Module
 - default entry point address for the chainId
 - paymaster instance is created by the SDK
