--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -132,7 +132,7 @@ pnpm add @biconomy/modules ethers
 ```javascript
 import { ethers } from "ethers";
 
-const provider = new new ethers.JsonRpcProvider("[RPC_Endpoint]")();
+const provider = new ethers.JsonRpcProvider("[RPC_Endpoint]")();
 const signer = new ethers.Wallet("[Private_Key]", provider);
 ```
 
