--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -59,7 +59,9 @@ import { createSmartAccountClient } from "@biconomy/account";
 
 const biconomySmartAccountConfig = {
   signer: signer,
-  bundlerUrl: "",
+  bundlerUrl:
+    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
 };
 
 const biconomySmartAccount = await createSmartAccountClient(
