--- a/docs/Stack/Paymaster/integration.mdx
+++ b/docs/Stack/Paymaster/integration.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 # Integration
 
-To see how this interacts with other packages in the sdk you can view the [Smart Accounts Integration page](/Account/integration).
+To see how this interacts with other packages in the sdk you can view the [Smart Accounts Integration page](/stack/account/integration).
 
 ## Installation
 
