--- a/versioned_docs/version-3.0/account/integration.mdx
+++ b/versioned_docs/version-3.0/account/integration.mdx
@@ -5,7 +5,7 @@ custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Account/integrat
 
 # Integration
 
-To use the full potential of the `Biconomy Smart Account` you will need a [bundler url](/Bundler/integration) and a [paymaster api key](/paymaster). Below is a basic installation and integration for smart accounts in your code.
+To use the full potential of the `Biconomy Smart Account` you will need a [bundler url](/stack/bundler/integration) and a [paymaster api key](/stack/paymaster). Below is a basic installation and integration for smart accounts in your code.
 
 ## Installation
 
