--- a/docs/Stack/Paymaster/index.mdx
+++ b/docs/Stack/Paymaster/index.mdx
@@ -1,6 +1,6 @@
 ---
-slug: /paymaster
-sidebar_position: 4
+slug: /stack/paymaster
+sidebar_position: 2
 title: Paymaster
 ---
 
@@ -16,20 +16,20 @@ With Biconomy's Paymaster service, you can manage gas fees for your users effort
     rel="noopener noreferrer"
   >
     Get in touch to learn more.
-  </a>
-</button>
+  </a>{" "}
+</button>{" "}
 
 In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on the dashboard and obtain the paymasterURL. Biconomy paymaster supports two modes:
 
 ## Sponsorship Paymaster
 
-![Sponsored](../images/overview/sponsored.png)
+![Sponsored](../../images/overview/sponsored.png)
 
 `Sponsorship` mode allows you to pay gas on behalf of the users, by eliminating the need of native tokens to be paid by the users.
 
 ## Token Paymaster
 
-![Erc20](../images/overview/erc20gas.png)
+![Erc20](../../images/overview/erc20gas.png)
 
 `ERC20` mode allows you to pay for the gas fees of your users in exchange for ERC-20 tokens. Check out the latest [supported ERC-20 tokens](/stack/paymaster/supportedNetworks).
 
