--- a/versioned_docs/version-3.0/bundler/integration.mdx
+++ b/versioned_docs/version-3.0/bundler/integration.mdx
@@ -85,8 +85,7 @@ const userOpReceiptMaxDurationIntervals: { [key in ChainId]?: number } = {
 };
 
 const bundler = new Bundler({
-  bundlerUrl:
-    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   chainId: 80001,
   userOpReceiptMaxDurationIntervals,
 });
