--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -59,8 +59,7 @@ import { createSmartAccountClient } from "@biconomy/account";
 
 const biconomySmartAccountConfig = {
   signer: signer,
-  bundlerUrl:
-    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
 };
 
@@ -84,8 +83,7 @@ const userOpReceiptMaxDurationIntervals: { [key in number]?: number } = {
 };
 
 const bundler = await createBundler({
-  bundlerUrl:
-    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   userOpReceiptMaxDurationIntervals,
 });
 
