--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -161,14 +161,14 @@ import { createSmartAccountClient, PaymasterMode } from "@biconomy/account";
 
 let baseAccount = await createSmartAccountClient({
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
-  bundlerUrl: "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   defaultValidationModule: multiChainModule,
   activeValidationModule: multiChainModule,
 });
 
 let polygonAccount = await createSmartAccountClient({
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
-  bundlerUrl: "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   defaultValidationModule: multiChainModule,
   activeValidationModule: multiChainModule,
 });
