--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -54,7 +54,7 @@ Set up a paymaster for the smart account by providing only the paymaster API key
       signer: signer,
       chainId: 80001
   bundlerUrl:
-    "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+    "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
     }
   );
