--- a/versioned_docs/version-3.0/modules/multichain.mdx
+++ b/versioned_docs/version-3.0/modules/multichain.mdx
@@ -162,7 +162,7 @@ import { BiconomySmartAccountV2 } from "@biconomy/account";
 let baseAccount = await BiconomySmartAccountV2.create({
   chainId: ChainId.BASE_GOERLI_TESTNET,
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
-  bundlerUrl: "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   defaultValidationModule: multiChainModule,
   activeValidationModule: multiChainModule,
 });
@@ -170,7 +170,7 @@ let baseAccount = await BiconomySmartAccountV2.create({
 let polygonAccount = await BiconomySmartAccountV2.create({
   chainId: ChainId.POLYGON_MUMBAI,
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
-  bundlerUrl: "https://bundler.biconomy.io/api/v2/{chain-id-here}/nJPK7B3ru.dd7f7861-190d-41bd-af80-6877f74b8f44",
+  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
   defaultValidationModule: multiChainModule,
   activeValidationModule: multiChainModule,
 });
