--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -72,7 +72,7 @@ console.log(`EOA address: ${eoa}`);
 // ------ 2. Create biconomy smart account instance
 const smartAccount = await createSmartAccountClient({
   signer: client,
-  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
+  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
 });
 const smartAccountAddress = await smartAccount.getAccountAddress();
@@ -91,7 +91,7 @@ let signer = new ethers.Wallet("PRIVATE_KEY", provider);
 
 const biconomySmartAccountConfig = {
   signer: signer,
-  bundlerUrl: "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
+  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
 };
 
